添加了tips和联系方式

--- a/README
+++ b/README
@@ -10,3 +10,4 @@ miniimagenet: https://drive.google.com/file/d/1sWN_LgZ5P9b8q6kw57i8pBMmWji-TCkH/
 mini-imagenet-train_600.npy: https://drive.google.com/drive/folders/1WtAyopaGNYTh1bT5CMEHCZSMOuTn3Qym?usp=sharing
 mini-imagenet-test_600.npy: https://drive.google.com/file/d/1rgNhQ92krHZU_2HnUBEn7OwxHDeOZsvS/view?usp=sharing
 
+tips:出于对隐私的保护，某些文件未公开。进一步地讨论可联系开发者：chuhao.j@gmail.com
