添加了对“可视化”的描述

--- a/README
+++ b/README
@@ -3,6 +3,7 @@
 本课题主要探究了如何缓解数据分布不均衡问题为模型带来的负面影响。我们使用样本的类内方差，对距离函数进行了修正，从而在
 一定程度上提升了模型的准确率。
 我们的改进方法，在20-way 5-shot和5-way 5-shot的设定下，取得了约2%的准确率提升。
+除此之外，我们也通过可视化的方式，去探究了我们的改进方法是否有效：事实表明，我们的改进方法可以让模型学习到更符合客观规律的决策边界。
 
 数据集：Mini-ImageNet
 下载链接：
